feat: Add FAQs and Services pages with responsive design and accessibility features
- Created a new FAQs page with a collapsible FAQ section for user interaction.
- Implemented a new Services page showcasing various beauty services offered, including detailed descriptions and images.
- Updated global styles to include new font files and adjusted existing styles for better consistency.
- Added a custom 404 Not Found page for improved user experience.
- Enhanced the Navbar component with improved accessibility and navigation links.
- Updated existing FAQ component styles for better visual appeal and responsiveness.
- Refactored Services component to include additional services and improved layout.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,19 +13,17 @@
 
 @font-face {
   font-family: 'Recoleta';
-  src: url('/fonts/Recoleta-Bold.woff2') format('woff2'),
-       url('/fonts/Recoleta-Bold.woff') format('woff');
-  font-weight: bold;
+  src: url('/fonts/Recoleta-RegularDEMO.otf') format('opentype');
+  font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
   font-family: 'Aulletta';
-  src: url('/fonts/Aulletta.woff2') format('woff2'),
-       url('/fonts/Aulletta.woff') format('woff');
+  src: url('/fonts/Aulletta.otf') format('opentype');
   font-weight: normal;
-  font-style: italic;
+  font-style: normal;
   font-display: swap;
 }
 
